// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationForm /> should render correctly 1`] = `
<Registration
  onClickMessageHandler={[MockFunction]}
>
  <styled.div>
    <div
      className="sc-AxjAm kFqgcy"
    >
      <styled.img
        alt="logo"
        src={Object {}}
      >
        <img
          alt="logo"
          className="sc-AxhUy fdjSkp"
          src={Object {}}
        />
      </styled.img>
      <form>
        <styled.input
          placeholder="name"
          type="text"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="name"
            type="text"
          />
        </styled.input>
        <styled.input
          placeholder="username"
          type="text"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="username"
            type="text"
          />
        </styled.input>
        <styled.input
          placeholder="password"
          type="password"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="password"
            type="password"
          />
        </styled.input>
        <styled.button>
          <button
            className="sc-AxiKw bAyasi"
          >
            create
          </button>
        </styled.button>
        <styled.p>
          <p
            className="sc-AxhCb eVMfSZ"
          >
            <span>
              Not registered? 
            </span>
            <a
              href="#"
              onClick={[MockFunction]}
            >
              Create an account
            </a>
          </p>
        </styled.p>
      </form>
    </div>
  </styled.div>
</Registration>
`;

exports[`<RegistrationForm /> should render correctly with default props 1`] = `
<Registration
  onClickMessageHandler={[Function]}
>
  <styled.div>
    <div
      className="sc-AxjAm kFqgcy"
    >
      <styled.img
        alt="logo"
        src={Object {}}
      >
        <img
          alt="logo"
          className="sc-AxhUy fdjSkp"
          src={Object {}}
        />
      </styled.img>
      <form>
        <styled.input
          placeholder="name"
          type="text"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="name"
            type="text"
          />
        </styled.input>
        <styled.input
          placeholder="username"
          type="text"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="username"
            type="text"
          />
        </styled.input>
        <styled.input
          placeholder="password"
          type="password"
        >
          <input
            className="sc-AxirZ PTCQu"
            placeholder="password"
            type="password"
          />
        </styled.input>
        <styled.button>
          <button
            className="sc-AxiKw bAyasi"
          >
            create
          </button>
        </styled.button>
        <styled.p>
          <p
            className="sc-AxhCb eVMfSZ"
          >
            <span>
              Not registered? 
            </span>
            <a
              href="#"
              onClick={[Function]}
            >
              Create an account
            </a>
          </p>
        </styled.p>
      </form>
    </div>
  </styled.div>
</Registration>
`;
